# ai-delivery-exception-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-powered Last Mile Delivery Exception Handling Automation.html  AI-powered Last Mile Delivery Exception Handling Automation.ipynb  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: settings.json
.cursor/rules/: 00-always.mdc  langgraph.mdc  tests.mdc  writing-rules.mdc
.github/workflows/: ci.yml
data/: delivery_logs.csv  ground_truth.csv
notebooks/exploration/: AI_powered_Last_Mile_Delivery_Exception_Handling_Automation.ipynb
src/delivery_exception_system/: __init__.py  __main__.py  config.py  graph.py  langsmith_dashboard.py  runner.py
src/delivery_exception_system/agents/: communication.py  critic.py  finalize.py  orchestrator.py  resolution.py
src/delivery_exception_system/data/: loader.py  vectorstore.py
src/delivery_exception_system/evaluation/: coherence.py  dashboard.py  metrics.py
src/delivery_exception_system/guardrails/: injection.py  noise.py
src/delivery_exception_system/models/: schemas.py  state.py
src/delivery_exception_system/preprocessing/: preprocessor.py
src/delivery_exception_system/reporting/: json_writer.py  resolution.py  summary.py
src/delivery_exception_system/tools/: customer_profile.py  delivery_logs.py  escalation_rules.py  locker_availability.py  playbook_search.py
tests/: conftest.py  test_escalation.py  test_graph.py  test_guardrails.py  test_preprocessing.py  test_state.py  test_tools.py
